fix workflow problem

--- a/.github/workflows/build_book.yaml
+++ b/.github/workflows/build_book.yaml
@@ -16,7 +16,8 @@ jobs:
       - name: Install mdbook
         uses: actions-rs/cargo@v1
         with:
-          command: install mdbook
+          command: install
+          args: mdbook
       
       - name: Build book
         run: mdbook build
